--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 .top{
 	display:flex;
 	justify-content:space-between;
+	flex-wrap:wrap;
 	margin:10px;
 }
 .logo-details{
@@ -23,6 +24,7 @@
 .link-boxes{
 	display:flex;
 	justify-content:space-between;
+	flex-wrap:wrap;
 }
 
 .content-links{
@@ -36,4 +38,5 @@
 	justify-content:space-between;
 	padding:0px 20px;
 	color:white;
+	flex-wrap:wrap;
 }
